--- a/styles.css
+++ b/styles.css
@@ -18,13 +18,11 @@
 }
 
 #hero-text h2 {
-  font-size: 22px;
   color: #212529;
 }
 
 #hero-text h4 {
-  font-size: 18px;
-  color: #9b9d9e;
+  color: #212529;
 }
 
 .hero-image {
