--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 
 #hero-text {
   color: #1976d2;
-  height: 46vh;
+  height: 94vh;
   background-color: #e3f2fd;
   background: linear-gradient(135deg, #ffffff55 25%, transparent 25%) -40px 0/
       80px 80px,
@@ -25,8 +25,8 @@
   color: #212529;
 }
 
-.hero-image {
-  height: 46vh;
+#hero-image {
+  height: 94vh;
   background-color: #e5e5f7;
   opacity: 0.8;
   background: linear-gradient(135deg, #0d47a155 25%, transparent 25%) -40px 0/
@@ -34,4 +34,26 @@
     linear-gradient(225deg, #0d47a1 25%, transparent 25%) -40px 0/ 80px 80px,
     linear-gradient(315deg, #0d47a155 25%, transparent 25%) 0px 0/ 80px 80px,
     linear-gradient(45deg, #0d47a1 25%, #e5e5f7 25%) 0px 0/ 80px 80px;
+}
+
+textarea {
+  resize: none;
+}
+
+#sendButton {
+  background-color: #1976d2 !important;
+  color: whitesmoke !important;
+}
+#sendButton:hover {
+  background-color: #1e88e5 !important;
+}
+
+footer a {
+  text-decoration: none;
+}
+
+@media (max-width: 576px) {
+  #hero-text {
+    height: 50vh;
+  }
 }
